# fastapi-memoapp-ddd

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.override.yml  compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: backend_pre_start.py  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: a38b24ba2e92_create_memos_table.py
backend/app/config/: __init__.py  app.py  config.py  database.py  settings.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  memo.py
backend/app/domain/exceptions/: __init__.py  memo_not_found_error.py
backend/app/domain/repositories/: __init__.py  memo_repository.py
backend/app/domain/value_objects/: __init__.py  memo_description.py  memo_due_date.py  memo_id.py  memo_priority.py  memo_status.py  memo_title.py
backend/app/infrastructure/di/: __init__.py  injection.py
backend/app/infrastructure/postgresql/: __init__.py  db.py
backend/app/infrastructure/structlog/: __init__.py  config.py  structlog_logger.py
backend/app/presentation/: __init__.py  router.py
backend/app/presentation/routes/: __init__.py  health.py  memo.py
backend/app/presentation/schemas/: __init__.py  memo.py
backend/app/usecase/: __init__.py  complete_memo_usecase.py  create_memo_usecase.py  delete_memo_usecase.py  find_memo_by_id_usecase.py  find_memos_usecase.py  update_memo_usecase.py
backend/app/usecase/interfaces/: __init__.py  logger.py
backend/scripts/: prestart.sh  test.sh  tests-start.sh
backend/tests/: conftest.py
backend/tests/config/: conftest.py  test_app.py  test_database.py  test_settings.py
backend/tests/domain/entities/: test_memo.py
backend/tests/domain/value_objects/: test_memo_description.py  test_memo_due_date.py  test_memo_id.py  test_memo_priority.py  test_memo_status.py  test_memo_title.py
backend/tests/infrastructure/: __init__.py
backend/tests/infrastructure/di/: conftest.py  test_injection.py
backend/tests/infrastructure/postgresql/: __init__.py  conftest.py
backend/tests/presentation/: __init__.py  conftest.py
backend/tests/scripts/: test_backend_pre_start.py  test_tests_pre_start.py
backend/tests/usecase/: __init__.py  conftest.py  test_complete_memo_usecase.py  test_create_memo_usecase.py  test_delete_memo_usecase.py  test_find_memo_by_id_usecase.py  test_find_memos_usecase.py  test_update_memo_usecase.py
scripts/: test.sh
(+18 files in other folders)
