[project]
name = "backend"
version = "0.1.0"
description = "FastAPI memo application backend"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "alembic>=1.12.1,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "tenacity<9.0.0,>=8.2.3",
    "structlog>=25.5.0",
    "rich>=14.3.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "mypy-extensions>=1.0.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "coverage>=7.4.3,<8.0.0",
    "httpx>=0.25.1,<1.0.0",
    "prek>=0.3.2,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
explicit_package_bases = true

[tool.ruff]
target-version = "py314"
exclude = ["alembic"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
unfixable = [
    "F401",
    "F841",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"
concurrency = ["greenlet"]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_also = [
    "case _ as unreachable",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "-s",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
filterwarnings = [
    "ignore:Please use `import python_multipart` instead:PendingDeprecationWarning",
]
